# handexo_7_29

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: Doxyfile
docs/source/: button_state_machine.rst  conf.py  cpp_api.rst  faq.rst  index.rst  python_api.rst  quickstart.rst  usage.rst  wifi_server.rst
src/cpp/nml_hand_exo/: config.h  gesture_controller.cpp  gesture_controller.h  gesture_library.cpp  gesture_library.h  nml_hand_exo.cpp  nml_hand_exo.h  nml_hand_exo.ino  utils.cpp  utils.h
src/cpp/serial_echo_test/serial_echo_test/: serial_echo_test.ino
src/examples/: DynamicPositionDataCollection_Flexion.py  StaticPositionsDataCollection.py  broadcast_test.py  example_imu_handexo_serial_python.py  example_pylsl_read.py  example_serial_exo.py  example_tcp_exo.py  freeDataCollection.py  hand_exo_gui.py  jnd_task.py  jnd_task2_128chan.py  jnd_task2_128chan_9dof.py  live_decoder_from_lsl_stream.py  lsl_rms.py  passive_intervention.py  passive_intervention_128chan.py  passive_intervention_128chan_9dof.py  pca_viewer.py  proprioceptive_task_manual.py  proprioceptive_task_timed.py  proprioceptive_task_timed_128chan.py  scratch.py  stm_imu_task  stm_task.py  stm_task_adjusted.py  stm_task_imu_128chan.py  stm_task_imu_128chan_9dof.py  subscribe_test.py
src/examples/nml_hand_exo/: __init__.py  _filters  hand_exo.py  interfaces.py
src/examples/pico_server/: code.py
src/examples/task/: task_config.json  task_gui_minimal.py  training_task.py
src/nml_hand_exo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+20 files in other folders)
