[project]
name = "nml_hand_exo"
version = "0.0.4"
description = "Python API for controlling the NML Hand Exoskeleton"
authors = [
    { name="Jonathan Shulgach", email="jshulgac@andrew.cmu.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["exo", "neurotech", "biomedical", "rehabilitation"]
dependencies = [
    "numpy",
    "pyserial",
    "pyyaml",
    "PyQt5",
    "pyqtgraph",
]

[project.urls]
Homepage = "https://github.com/Neuro-Mechatronics-Interfaces/NML_Hand_Exo"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nml_hand_exo"]
package-dir = { "" = "src" }

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "breathe",
    "sphinx-copybutton",
    "m2r2",
    "sphinx_rtd_theme",
]